--- a/android-developer.html
+++ b/android-developer.html
@@ -53,7 +53,7 @@
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/asanarebel/jobs/4035617002'>Job Application for Android Developer (f/m/d) at Asana Rebel</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/asanarebel/jobs/4035617002'>Job Application for Android Developer (f/m/d) at Asana Rebel</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -125,7 +125,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/commencis/d7fe92a6-ffa5-428a-a70b-50532b7b018f'>Commencis - Senior Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/commencis/d7fe92a6-ffa5-428a-a70b-50532b7b018f'>Commencis - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Istanbul</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -180,7 +180,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">El Segundo, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999697965300-android-developer'>JobTeaser Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999697965300-android-developer'>JobTeaser Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -188,7 +188,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://www.applythis.net/job/?a=021808F20.0'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.applythis.net/job/?a=021808F20.0'>
 	
     Apply for Lead Android Developer -  Woking, United Kingdom - IT and Internet - SS003 - Find a job, build a career
 
@@ -373,7 +373,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://codete.workable.com/j/FBD9EB0D40'>Codete - Jobs: Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codete.workable.com/j/FBD9EB0D40'>Codete - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Krak?w Lesser Poland Voivodeship, Poland  Canada</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -412,7 +412,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://techfirefly.workable.com/j/169E74AF68'>Tech Firefly - Jobs: Android Developer (Locals Only) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://techfirefly.workable.com/j/169E74AF68'>Tech Firefly - Jobs: Android Developer (Locals Only) - Apply online</a></h5> 
 <p><span class="badge badge-light">United States  Plano, TX</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -451,7 +451,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/isobar/job/oLjjbfwi'>Isobar Careers - Freelance Lead Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/isobar/job/oLjjbfwi'>Isobar Careers - Freelance Lead Android Developer</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
