--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/verdigris/57be7cd1-1f4c-4bc5-bba4-65b6b7b6bb2d'>Verdigris - Senior Frontend Engineer</a></h5> 
+<p><span class="badge badge-light">Taipei Taiwan</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.searchtalent.com/recruit/ViewJob.na?digest=76@7P1EjMNep951Zh.itX@aKTRvMdq2Y3cyDBnI5Kb8-&embedsource=Twitter'>Senior Frontend Developer (m/w/d) - React.js</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/ansarada/f3c19e12-80ef-45da-ac4d-bf8cba68fe55'>Ansarada - Frontend Engineer</a></h5> 
+<p><span class="badge badge-light">Ho Chi Minh Sydney</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://worthinternetsystems1.recruitee.com/o/frontend-developer-nl-the-hague'>
+      Frontend Developer NL - Worth Internet Systems
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://bx-cert.ru/job/frontend--66294/'>? ?????-?????????? ????????? Frontend-???????????, ???????? ?? 30000 ??????</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -92,7 +110,7 @@
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://letsumai.join.com/jobs/467667-react-front-end-developer'>Job @ UMAI (Kuala Lumpur): React Front-End Developer | JOIN</a></h5> 
+<h5><a href='https://letsumai.join.com/jobs/467667-react-front-end-developer'>Job @ UMAI (Kuala Lumpur): React Front-End Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -327,7 +345,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.xing.com/jobs/hamburg-frontend-developer-52201363'>Frontend Developer (m/w/d) in Hamburg | XING Jobs</a></h5> 
+<h5><a href='https://www.xing.com/jobs/hamburg-frontend-developer-52201363'>Frontend Developer (m/w/d) in Hamburg | XING Jobs</a></h5> 
 <p><span class="badge badge-light">Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -363,7 +381,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Barcelona  Barcelona</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://vodastra.applytojob.com/apply/QTgaaKI0cl/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vodastra.applytojob.com/apply/QTgaaKI0cl/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -409,7 +427,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/p3-americas/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/p3-americas/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
 <p><span class="badge badge-light">North America North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -421,7 +439,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698336320-senior-software-engineer-front-end-full-stack-customers-team'>Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698336320-senior-software-engineer-front-end-full-stack-customers-team'>Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -445,23 +463,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698331465-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Jose, CA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/q4inc/3c161680-68d3-4713-a718-7d291ac501d4'>Q4 - Intermediate Front End Developer</a></h5> 
-<p><span class="badge badge-light">Toronto, ON</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/hellooffice/4e9e2947-002e-41a2-b4f2-d4971ec279d9'>HelloOffice - Front End Engineer</a></h5> 
-<p><span class="badge badge-light">San Francisco  San Francisco</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://metalshub.join.com/jobs/466379-frontend-developer-m-f-d'>Job @ Metals Hub (D?sseldorf): Frontend Developer ... | JOIN</a></h5> 
-<p><span class="badge badge-light">D?sseldorf, Germany</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
